<resources>
    <string name="app_name">TripPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trip">New Trip</string>
    <string name="depart">Depart</string>
    <string name="returning">Return</string>
    <string name="origin">Flying from</string>
    <string name="destination">Flying to</string>
    <string name="budget">Budget:</string>
    <string name="randomdestination">Choose Random Destination</string>
    <string name="itinerary">Excursions and Itinerary</string>
    <string name="themeparks">Theme Parks</string>
    <string name="restaurants">Restaurants</string>
    <string name="museums">Museums/Galleries</string>
    <string name="beaches">Beaches/Nature</string>
    <string name="planforme">Plan for Me</string>
    <string name="results">Results</string>
    <string name="addfriends">Add Friends</string>
    <string name="owner">TripPlanner</string>
    <string name="titletext">Trip Planner</string>
    <string name="basicinfo">Basic Information</string>
    <string name="travelinfo">Travel Information</string>
    <string name="logout">SIGN OUT</string>
    <string name="dates">Trip Dates</string>
    <string name="my_trips">My Trips</string>
    <string name="flying_to">Flying to</string>
    <string name="starttext">No trips yet. Click the + button to get started!</string>
    <string name="destinationtext">Destination</string>
    <string name="flightinfo">Flight Info</string>
    <string name="save">SAVE</string>
    <string name="search">SEARCH</string>
    <string name="precheck">TSA Precheck Number</string>
    <string name="passprot">Passport Number</string>
    <string name="KTN">Known Traveler Number</string>
    <string name="name">Name</string>
    <string name="budgetSeekbar">0</string>
    <string name="city">City</string>
    <string name="welcome">Welcome, User</string>
    <string name="nearby">Nearby</string>
    <string name="discover">Discover</string>
    <string name="explorepop">Explore Popular Destinations</string>
    <string name="please_wait_as_we_personalize_your_experience">Please wait as we personalize your experience</string>
    <string name="go_back">Go back</string>
    <string name="please_wait_as_we_look_for_flights">Please wait as we look for flights...</string>
    <string name="please_wait_as_we_generate_your_itinerary">Please wait as we generate your itinerary...</string>
    <string name="destination_city">Destination City</string>
    <string name="next">NEXT</string>
    <string name="discover_together">Discover Together</string>
    <string name="plan_and_share_group_trips_effortlessly">Plan and share group trips effortlessly</string>
    <string name="terminal">Terminal</string>
    <string name="see_more">See More</string>
    <string name="choose_a_flight">Choose a Flight</string>
    <string name="excursions_and_itinerary">Excursions and Itinerary</string>
    <string name="your_travel_dashboard">Your Travel Dashboard</string>
    <string name="welcome_to_your_travel_overview_here_s_a_look_at_your_upcoming_journeys_use_this_map_to_view_all_your_planned_trips">Welcome to your travel overview! Here\'s a look at your upcoming journeys. Use this map to view all your planned trips.</string>
    <string name="start_exploring">Start Exploring</string>
    <string name="discover_nearby_attractions">Discover nearby attractions</string>


</resources>